Обновление проекта, поддержка новых функций Создание личного кабинета пользователя